fix: proper padding

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const ICON_MAP: Record<string, any> = {
         <title>Workshop & Riset Informatika</title>
     </head>
     <body>
-        <div class="mx-auto h-full flex flex-col items-center lg:justify-center">
+        <div class="mx-auto h-full flex flex-col items-center lg:justify-center my-8 lg:my-0">
             <picture>
                 <source srcset="/logo/wri-logo-dark.png" media="(prefers-color-scheme: dark)">
                 <img class="w-80 mb-4 lg:mt-0" src="/logo/wri-logo-light.png" alt="Workshop & Riset Informatika" />
